Fix CS overflow.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,257 +1,65 @@
-.content {
-    background-color: #000f1e;
-    font-family: sans-serif;
+/* ----------------------------------------------
+ * defining global constants
+ * --------------------------------------------- */
+/* line 33, ../pages/external-tab/stylesheets/main.css.sass */
+body {
+    background: transparent; }
+
+/* line 37, ../pages/external-tab/stylesheets/main.css.sass */
+.module.box .content {
+    background: transparent; }
+/* line 39, ../pages/external-tab/stylesheets/main.css.sass */
+.no-layout .module.box .content {
+    background: transparent; }
+
+/* line 42, ../pages/external-tab/stylesheets/main.css.sass */
+.redbull-blue {
+    color: #213872; }
+
+/* line 44, ../pages/external-tab/stylesheets/main.css.sass */
+.redbull-red {
+    color: #cc1c4a; }
+
+/* line 46, ../pages/external-tab/stylesheets/main.css.sass */
+.redbull-yellow {
+    color: #facd34; }
+
+/* line 49, ../pages/external-tab/stylesheets/main.css.sass */
+.title {
+    font-weight: bold;
+    font-family: "Siri Core", Tahoma, Helvetica, sans-serif; }
+
+.button-signup {
+    text-align:center;
+    background:#cc1c4a;
+    border: solid #cc1c4a 3px;
+    padding:0.1em 0;
+    font-size: 26px;
+    font-weight: normal;
 }
 
-p {
-    padding: 0;
-    margin: 0;
+.button-signup:hover{
+    background-color: white;
+    border: solid #cc1c4a 3px;
+    /* Firefox */
+    -moz-transition: all 0.3s ease-in;
+    /* WebKit */
+    -webkit-transition: all 0.3s ease-in;
+    /* Opera */
+    -o-transition: all 0.3s ease-in;
+    /* Standard */
+    transition: all 0.3s ease-in;
 }
 
-h2 {
-    font-size: 30px;
+.button-signup a:hover, .button-signup:hover > a, a:active, a:visited{
+    color:#cc1c4a;
 }
 
-@media screen and (min-width: 768px) {
-    h2 {
-        font-size: 42px;
-        line-height: 1em;
-    }
+.button-signup a, a:active, a:visited {
+    color:white;
 }
-
-.grid {
-    margin: 0 auto;
-    overflow: hidden;
-    min-width: 250px;
-    padding: 30px 0 0 0;
-}
-
-.grid-current-item {
-    opacity: 1;
-}
-
-.grid-item {
-    float: left;
-    transition: all 200ms ease-in-out;
-}
-
-.event-info {
-    bottom: 0;
-    color: #ffffff;
-    display: inline-block;
-    height: 100%;
-    margin: auto;
-    width: 100%;
-    font-size: 30px;
-    letter-spacing: 3px;
-    transition: all 200ms;
-    text-align: center;
-}
-
-.grid-item-4 {
-    min-height: 50px;
-    width: 18%;
-    margin: 0.25%;
-    overflow: hidden;
-}
-
-.grid-item-3 {
-    min-height: 100px;
-    width: 27%;
-    margin: 20px 3% 0 3%;
-    float: left;
-    transition: all 200ms;
-}
-@media screen and (max-width: 768px) {
-    .grid-item-3 {
-        width: 100%;
-        margin: auto;
-    }
-    .grid-item {
-        margin-bottom: 5%;
-    }
-    .grid {
-        margin: 0 auto;
-        overflow: hidden;
-        width: 90%;
-    }
-}
-
-.grid-item-2 {
-    min-height: 100px;
-    width: 29%;
-    margin: 1%;
-    overflow: hidden;
-}
-
-.grid-item-1 {
-    min-height: 180px;
-    width: 47%;
-    margin: 1%;
-    overflow: hidden;
-}
-
-.grid-item-0 {
-    width: 89%;
-    margin: 0 auto 40px;
-    position: relative;
-}
-
-.grid-sizer-container {
-    position: fixed;
-    right: 20px;
-    bottom: 20px;
-    width: 40px;
-}
-
-img {
-    width: 100%;
-    height: auto;
-    box-shadow: 8px 9px 40px 0 rgba(0, 0, 0, .13);
-}
-
-.social-artwork li.social-links {
-    margin-top: 2px;
-}
-
-.social-artwork li.roxrite-bottom {
-    width: 220px;
-    border: 0;
-}
-
-.roxrite-image-dark {
-    position: relative;
-    margin: 0;
-    width: 160px;
-    display: none;
-}
-
-@media screen and ( min-width: 768px) {
-    .social-artwork {
-        padding: 22px 0 0 0;
-    }
-
-    .roxrite-image-dark {
-        display: inline-block;
-    }
-}
-
-.social-about, .social-about-mobile {
-    padding: 0;
-    position: relative;
-}
-
-.social-about {
-    position: fixed;
-    right: 30px;
-    top: 30px;
-}
-
-.social-about {
-    display: none;
-}
-
-.social-about-mobile {
-    display: inline-block;
-    padding-top: 30px;
-}
-
-@media screen and ( min-width: 768px) {
-    .social-about {
-        display: inline-block;
-    }
-
-    .social-about-mobile {
-        display: none;
-    }
-}
-
-.social-artwork li, .social-about li, .social-about-mobile li {
-    display: inline;
-    border-bottom: 2px solid black;
-    color: #000000;
-    padding-bottom: 3px;
-    margin-right: 20px;
-}
-
-.social-artwork li a, .social-about li a, .social-about-mobile li a {
-    color: inherit;
-    text-decoration: none;
-    font-size: 12px;
-}
-
-#link-home {
-    text-decoration: none;
-    margin-top: 17px;
-    text-transform: uppercase;
-    font-size: 13px;
-    color: #000;
-    position: relative;
-    height: 21px;
-    width: 44px;
-    display: inline-block;
-    top: 8px;
-    padding-left: 39px;
-    padding-top: 9px;
-    padding-bottom: 49px;
-}
-
-#link-home .arrow-back-v {
-    border-top: 2px solid #000000;
-    border-right: 2px solid #000000;
-    display: inline-block;
-    width: 8px;
-    height: 8px;
-    transform: rotate(-135deg);
-    position: absolute;
-    top: 10px;
-    left: 5px;
-}
-
-#link-home .arrow-back-t {
-    width: 2px;
-    display: inline-block;
-    position: absolute;
-    background-color: #000000;
-    left: 13px;
-    height: 18px;
-    transform: rotate(90deg);
-    top: 6px;
-}
-
-@media screen and ( min-width: 768px) {
-    #link-home {
-        display: none;
-    }
-}
-
-#loader {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, 0);
-    width: 100%;
-    text-align: center;
-    padding-top: 50%;
-}
-
-/* Overlay End */
-
-.b-lazy {
-    transition: all 500ms ease-in-out;
-    opacity: 0;
-    transform: scale(1) translate(0%, 0%);
-}
-
-.b-lazy.b-loaded {
-    opacity: 1;
-    transform: scale(1) translate(0%);
-}
-
-.hide {
-    height: 0;
-    width: 0;
-    margin: 0;
-    padding: 0;
-    min-height: 0;
+.break{
+    display:block;
+    border-bottom:solid 3px #cc1c4a;
+    margin:6px 0;
 }
